# colpali-rag

./: .env.example  .gitignore  LICENSE  README.md  conftest.py  docker-compose.yml  pyproject.toml
docs/: ARCHITECTURE.md  COLPALI.md  CONSTRAINTS.md  DEMO.md  EVAL.md  EXTENDING.md  GROUNDING.md  HANDOFF.md  PERFORMANCE.md  PIPELINE.md  QUICKSTART.md  RETRIEVAL.md  SCALING.md  STUDIO.md
src/colpali_rag/: __init__.py  app.py  artifact_store.py  cli.py  config.py  diagnostics.py  embedder.py  engine.py  errors.py  eval.py  faithfulness.py  generator.py  graph_eval.py  heatmap.py  lexical.py  models_registry.py  openai_api.py  pdf.py  protocols.py  qdrant_server.py  rerank.py  schemas.py  store.py
src/colpali_rag/studio/: __init__.py  api.py  catalog.py  generate.py  render.py  server.py  session.py  spec.py  tabular.py
src/colpali_rag/studio/web_dist/: index.html
src/colpali_rag/studio/web_dist/assets/: allPaths-B17Pldh2.js  allPaths-ByY5fqj0.js  allPaths-CyHAtZeJ.js  allPaths-DRk6Npq2.js  allPathsLoader-BUZ45fp2.js  allPathsLoader-QxRZLrUb.js  allPathsLoader-x2KkVxmc.js  allPathsLoader-zUZ5wS18.js  blueprint-icons-20-BYOQY6EV.eot  index-B1hGeilI.js  index-BN4AEluX.css  index-DCihiyXj.js  index-Dx6XAM6P.js  index-NVZL4zc1.js  index-W58HgMhY.js  index-WeIfHS9M.css  index-f3ZlCtWg.css  index-nxWOrdSz.css  index-wTlgfbz6.js  splitPathsBySizeLoader-B0KO_aue.js  splitPathsBySizeLoader-BvEQX5Yh.js  (+2 more)
tests/: test_catalog.py  test_colpali_rag.py  test_diagnostics.py  test_eval_metrics.py  test_graph_eval.py  test_hybrid.py  test_openai_api.py  test_qdrant_server.py  test_query_rewrite.py  test_run_summary.py  test_studio.py  test_v2.py  test_v3.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
web/src/components/: BlockNode.tsx  ChatPanel.tsx  DiagramCanvas.tsx  SourcesPanel.tsx
web/src/lib/: flow.ts
